jhipster/gen/com/intellij/jhipster/parser/JdlParser.java
// This is a generated file. Not intended for manual editing.
package com.intellij.jhipster.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.intellij.jhipster.psi.JdlTokenTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class JdlParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return root(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ARRAY_LITERAL, BOOLEAN_LITERAL, ID, NUMBER_LITERAL,
      REGEX_LITERAL, STRING_LITERAL, VALUE),
  };

  /* ********************************************************** */
  // STRUDEL annotationId (LPARENTH annotationValue RPARENTH)?
  public static boolean annotation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation")) return false;
    if (!nextTokenIs(b, STRUDEL)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATION, null);
    r = consumeToken(b, STRUDEL);
    p = r; // pin = 1
    r = r && report_error_(b, annotationId(b, l + 1));
    r = p && annotation_2(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (LPARENTH annotationValue RPARENTH)?
  private static boolean annotation_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_2")) return false;
    annotation_2_0(b, l + 1);
    return true;
  }

  // LPARENTH annotationValue RPARENTH
  private static boolean annotation_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPARENTH);
    r = r && annotationValue(b, l + 1);
    r = r && consumeToken(b, RPARENTH);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean annotationId(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationId")) return false;
    if (!nextTokenIs(b, "<annotation identifier>", IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATION_ID, "<annotation identifier>");
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // withOptionValue | stringLiteral | numberLiteral
  public static boolean annotationValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationValue")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATION_VALUE, "<annotation value>");
    r = withOptionValue(b, l + 1);
    if (!r) r = stringLiteral(b, l + 1);
    if (!r) r = numberLiteral(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (NEWLINE | annotation)*
  static boolean annotations(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotations")) return false;
    while (true) {
      int c = current_position_(b);
      if (!annotations_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "annotations", c)) break;
    }
    return true;
  }

  // NEWLINE | annotation
  private static boolean annotations_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotations_0")) return false;
    boolean r;
    r = consumeToken(b, NEWLINE);
    if (!r) r = annotation(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // APPLICATION_KEYWORD NEWLINE* LBRACE NEWLINE* applicationContent NEWLINE* RBRACE
  public static boolean application(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "application")) return false;
    if (!nextTokenIs(b, APPLICATION_KEYWORD)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, APPLICATION, null);
    r = consumeToken(b, APPLICATION_KEYWORD);
    p = r; // pin = 1
    r = r && report_error_(b, application_1(b, l + 1));
    r = p && report_error_(b, consumeToken(b, LBRACE)) && r;
    r = p && report_error_(b, application_3(b, l + 1)) && r;
    r = p && report_error_(b, applicationContent(b, l + 1)) && r;
    r = p && report_error_(b, application_5(b, l + 1)) && r;
    r = p && consumeToken(b, RBRACE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // NEWLINE*
  private static boolean application_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "application_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, NEWLINE)) break;
      if (!empty_element_parsed_guard_(b, "application_1", c)) break;
    }
    return true;
  }

  // NEWLINE*
  private static boolean application_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "application_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, NEWLINE)) break;
      if (!empty_element_parsed_guard_(b, "application_3", c)) break;
    }
    return true;
  }

  // NEWLINE*
  private static boolean application_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "application_5")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, NEWLINE)) break;
      if (!empty_element_parsed_guard_(b, "application_5", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // (NEWLINE | configBlock | useConfigurationOption | configurationOption)*
  static boolean applicationContent(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "applicationContent")) return false;
    while (true) {
      int c = current_position_(b);
      if (!applicationContent_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "applicationContent", c)) break;
    }
    return true;
  }

  // NEWLINE | configBlock | useConfigurationOption | configurationOption
  private static boolean applicationContent_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "applicationContent_0")) return false;
    boolean r;
    r = consumeToken(b, NEWLINE);
    if (!r) r = configBlock(b, l + 1);
    if (!r) r = useConfigurationOption(b, l + 1);
    if (!r) r = configurationOption(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // value (COMMA|&RBRACKET)
  static boolean arrayElement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayElement")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = value(b, l + 1);
    p = r; // pin = 1
    r = r && arrayElement_1(b, l + 1);
    exit_section_(b, l, m, r, p, JdlParser::notBracketOrNextValue);
    return r || p;
  }

  // COMMA|&RBRACKET
  private static boolean arrayElement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayElement_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    if (!r) r = arrayElement_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // &RBRACKET
  private static boolean arrayElement_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayElement_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _AND_);
    r = consumeToken(b, RBRACKET);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LBRACKET (arrayElement | NEWLINE)* RBRACKET
  public static boolean arrayLiteral(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayLiteral")) return false;
    if (!nextTokenIs(b, LBRACKET)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARRAY_LITERAL, null);
    r = consumeToken(b, LBRACKET);
    p = r; // pin = 1
    r = r && report_error_(b, arrayLiteral_1(b, l + 1));
    r = p && consumeToken(b, RBRACKET) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (arrayElement | NEWLINE)*
  private static boolean arrayLiteral_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayLiteral_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!arrayLiteral_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arrayLiteral_1", c)) break;
    }
    return true;
  }

  // arrayElement | NEWLINE
  private static boolean arrayLiteral_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayLiteral_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = arrayElement(b, l + 1);
    if (!r) r = consumeToken(b, NEWLINE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // TRUE | FALSE
  public static boolean booleanLiteral(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "booleanLiteral")) return false;
    if (!nextTokenIs(b, "<boolean literal>", FALSE, TRUE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOLEAN_LITERAL, "<boolean literal>");
    r = consumeToken(b, TRUE);
    if (!r) r = consumeToken(b, FALSE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // configKeyword NEWLINE* LBRACE (NEWLINE | configElement)* RBRACE
  public static boolean configBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "configBlock")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONFIG_BLOCK, "<config block>");
    r = configKeyword(b, l + 1);
    p = r; // pin = 1
    r = r && report_error_(b, configBlock_1(b, l + 1));
    r = p && report_error_(b, consumeToken(b, LBRACE)) && r;
    r = p && report_error_(b, configBlock_3(b, l + 1)) && r;
    r = p && consumeToken(b, RBRACE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // NEWLINE*
  private static boolean configBlock_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "configBlock_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, NEWLINE)) break;
      if (!empty_element_parsed_guard_(b, "configBlock_1", c)) break;
    }
    return true;
  }

  // (NEWLINE | configElement)*
  private static boolean configBlock_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "configBlock_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!configBlock_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "configBlock_3", c)) break;
    }
    return true;
  }

  // NEWLINE | configElement
  private static boolean configBlock_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "configBlock_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, NEWLINE);
    if (!r) r = configElement(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // optionNameValue (COMMA|&NEWLINE)
  static boolean configElement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "configElement")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = optionNameValue(b, l + 1);
    p = r; // pin = 1
    r = r && configElement_1(b, l + 1);
    exit_section_(b, l, m, r, p, JdlParser::notRBraceOrNextOption);
    return r || p;
  }

  // COMMA|&NEWLINE
  private static boolean configElement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "configElement_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    if (!r) r = configElement_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // &NEWLINE
  private static boolean configElement_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "configElement_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _AND_);
    r = consumeToken(b, NEWLINE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // "config"
  public static boolean configKeyword(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "configKeyword")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONFIG_KEYWORD, "<config keyword>");
    r = consumeToken(b, "config");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // configurationOptionName (wildcardLiteral | entitiesList) withOption? exceptEntities?
  public static boolean configurationOption(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "configurationOption")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONFIGURATION_OPTION, null);
    r = configurationOptionName(b, l + 1);
    p = r; // pin = 1
    r = r && report_error_(b, configurationOption_1(b, l + 1));
    r = p && report_error_(b, configurationOption_2(b, l + 1)) && r;
    r = p && configurationOption_3(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // wildcardLiteral | entitiesList
  private static boolean configurationOption_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "configurationOption_1")) return false;
    boolean r;
    r = wildcardLiteral(b, l + 1);
    if (!r) r = entitiesList(b, l + 1);
    return r;
  }

  // withOption?
  private static boolean configurationOption_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "configurationOption_2")) return false;
    withOption(b, l + 1);
    return true;
  }

  // exceptEntities?
  private static boolean configurationOption_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "configurationOption_3")) return false;
    exceptEntities(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean configurationOptionName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "configurationOptionName")) return false;
    if (!nextTokenIs(b, "<configuration option>", IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONFIGURATION_OPTION_NAME, "<configuration option>");
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // withOptionValue withOptionValueItem*
  public static boolean configurationOptionValues(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "configurationOptionValues")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONFIGURATION_OPTION_VALUES, null);
    r = withOptionValue(b, l + 1);
    p = r; // pin = 1
    r = r && configurationOptionValues_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // withOptionValueItem*
  private static boolean configurationOptionValues_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "configurationOptionValues_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!withOptionValueItem(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "configurationOptionValues_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // constantName ASSIGN value
  public static boolean constant(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constant")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONSTANT, null);
    r = constantName(b, l + 1);
    r = r && consumeToken(b, ASSIGN);
    p = r; // pin = 2
    r = r && value(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean constantName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constantName")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, CONSTANT_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // DEPLOYMENT_KEYWORD NEWLINE* LBRACE (NEWLINE | deploymentElement)* RBRACE
  public static boolean deployment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deployment")) return false;
    if (!nextTokenIs(b, DEPLOYMENT_KEYWORD)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DEPLOYMENT, null);
    r = consumeToken(b, DEPLOYMENT_KEYWORD);
    p = r; // pin = 1
    r = r && report_error_(b, deployment_1(b, l + 1));
    r = p && report_error_(b, consumeToken(b, LBRACE)) && r;
    r = p && report_error_(b, deployment_3(b, l + 1)) && r;
    r = p && consumeToken(b, RBRACE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // NEWLINE*
  private static boolean deployment_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deployment_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, NEWLINE)) break;
      if (!empty_element_parsed_guard_(b, "deployment_1", c)) break;
    }
    return true;
  }

  // (NEWLINE | deploymentElement)*
  private static boolean deployment_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deployment_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!deployment_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "deployment_3", c)) break;
    }
    return true;
  }

  // NEWLINE | deploymentElement
  private static boolean deployment_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deployment_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, NEWLINE);
    if (!r) r = deploymentElement(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // optionNameValue (COMMA|&NEWLINE)
  static boolean deploymentElement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deploymentElement")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = optionNameValue(b, l + 1);
    p = r; // pin = 1
    r = r && deploymentElement_1(b, l + 1);
    exit_section_(b, l, m, r, p, JdlParser::notRBraceOrNextOption);
    return r || p;
  }

  // COMMA|&NEWLINE
  private static boolean deploymentElement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deploymentElement_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    if (!r) r = deploymentElement_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // &NEWLINE
  private static boolean deploymentElement_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deploymentElement_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _AND_);
    r = consumeToken(b, NEWLINE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // id entityIdItem*
  public static boolean entitiesList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entitiesList")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ENTITIES_LIST, null);
    r = id(b, l + 1);
    p = r; // pin = 1
    r = r && entitiesList_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // entityIdItem*
  private static boolean entitiesList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entitiesList_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!entityIdItem(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "entitiesList_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // annotations ENTITY_KEYWORD NEWLINE* entityId NEWLINE* entityTableDeclaration? entityBody?
  public static boolean entity(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ENTITY, "<entity>");
    r = annotations(b, l + 1);
    r = r && consumeToken(b, ENTITY_KEYWORD);
    p = r; // pin = 2
    r = r && report_error_(b, entity_2(b, l + 1));
    r = p && report_error_(b, entityId(b, l + 1)) && r;
    r = p && report_error_(b, entity_4(b, l + 1)) && r;
    r = p && report_error_(b, entity_5(b, l + 1)) && r;
    r = p && entity_6(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // NEWLINE*
  private static boolean entity_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, NEWLINE)) break;
      if (!empty_element_parsed_guard_(b, "entity_2", c)) break;
    }
    return true;
  }

  // NEWLINE*
  private static boolean entity_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, NEWLINE)) break;
      if (!empty_element_parsed_guard_(b, "entity_4", c)) break;
    }
    return true;
  }

  // entityTableDeclaration?
  private static boolean entity_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_5")) return false;
    entityTableDeclaration(b, l + 1);
    return true;
  }

  // entityBody?
  private static boolean entity_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_6")) return false;
    entityBody(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // NEWLINE* LBRACE (NEWLINE | entityElement)* RBRACE
  static boolean entityBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entityBody")) return false;
    if (!nextTokenIs(b, "", LBRACE, NEWLINE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = entityBody_0(b, l + 1);
    r = r && consumeToken(b, LBRACE);
    p = r; // pin = 2
    r = r && report_error_(b, entityBody_2(b, l + 1));
    r = p && consumeToken(b, RBRACE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }
